# retif

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO  build.sh  clean.sh  install.sh  m  triggers
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: benchmark.c  benchmark.sh  benchmark_attach.c  benchmark_create.c  boxplot-scatter.py  converter.py  makefile  plotter.py  rte_cycles.c  rte_cycles.h
benchmark/configs/: benchmark.cfg  benchmark0.cfg  benchmark1.cfg  benchmarkn.cfg
channel/: CMakeLists.txt  retif_channel.c  retif_channel.h  usocket.c  usocket.h
common/: CMakeLists.txt  list.c  list.h  logger.h  retif_types.h
conf/: CMakeLists.txt  README.md  retif.conf  retifconf.yaml
daemon/: CMakeLists.txt  daemon.c  doxyfile  makefile  retif.in  retif_cli.h  retif_config.c  retif_config.h.in  retif_config.new.c  retif_daemon.c  retif_daemon.h  retif_daemon_main.c  retif_plugin.c  retif_plugin.h.in  retif_scheduler.c  retif_scheduler.h  retif_task.c  retif_task.h  retif_taskset.c  retif_taskset.h  retif_utils.c  retif_utils.h  retif_yaml.h  retifd  vector.c  vector.h  yaml.h
daemon/init.d/: retif.in
daemon/lib/: CMakeLists.txt  atomic.h  hashmap.h  list.c  list.h  list_int.c  list_int.h  list_ptr.c  list_ptr.h  logger.h  shatomic.c  shatomic.h  usocket.c  usocket.h
daemon/plugins/: CMakeLists.txt  makefile  sched_EDF.c  sched_FP.c  sched_RM.c  sched_RR.c  schedconfig.cfg
daemon/src/: retif_config.c  retif_config.h  retif_config.h.in  retif_daemon.c  retif_daemon.h  retif_plugin.c  retif_plugin.h  retif_plugin.h.in  retif_protocol.h  retif_scheduler.c  retif_scheduler.h  retif_task.c  retif_task.h  retif_taskset.c  retif_taskset.h  retif_utils.c  retif_utils.h  rts_channel.c  rts_channel.h  rts_config.c  rts_config.h  rts_daemon.c  rts_daemon.h  rts_limits.c  rts_limits.h  rts_plugin.c  rts_plugin.h  rts_protocol.h  rts_scheduler.c  rts_scheduler.h  rts_task.c  rts_task.h  rts_taskset.c  rts_taskset.h  rts_types.h  rts_utils.c  rts_utils.h
daemon_plugins/: sched_EDF.c
docs/: CMakeDoxyfile.in  CMakeLists.txt  Doxyfile.in
lib/: CMakeLists.txt  makefile  retif.h  retif_lib.c  rts_lib.c  rts_lib.h
monitor/: Makefile  README.md  main.c  terminal.c  terminal.h
packaging/: CMakeLists.txt
packaging/archives/: CMakeLists.txt
packaging/deb/: CMakeLists.txt
packaging/rpm/: CMakeLists.txt
plugins/: CMakeLists.txt  README.md  makefile  sched_EDF.c  sched_FP.c  sched_RM.c  sched_RR.c
test/: CMakeLists.txt  client.c  makefile
